--- a/educacao.html
+++ b/educacao.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Enem</title>
     <link rel="stylesheet" href="index.css">
-    <link rel="Icon" href="../site_noticias/img_logo.png" />
+    <link rel="Icon" href="site_noticias/img_logo.png" />
  
   </head>
   <body>
     <b>
       <div class="logo">
         <img
-        src="../site_noticias/img_logo.png"alt="fotos" width="150" height="80" />
+        src="site_noticias/img_logo.png"alt="fotos" width="150" height="80" />
       </div>
       <nav>
         <ul>
