--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Let News</title>
     <link rel="stylesheet" href="index.css">
-    <link rel="Icon" href="site_noticias/img_logo.png" />
+    <link rel="Icon" href="img_logo.png" />
  
   </head>
   <body>
