--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <b>
       <div class="logo">
         <img
-        src="site_noticias/img_logo.png"alt="fotos" width="150" height="80" />
+        src="img_logo.png"alt="fotos" width="150" height="80" />
       </div>
       <nav>
         <ul>
@@ -30,9 +30,9 @@
       
       <h2>Notícias em Tempo Real</h2>
       <div class="imagens" id="fotos">
-        <a href="esporte.html"><img src="site_noticias/esporte.png" alt="esporte" width="400"  /></a>
-        <a href="carros.html"><img src="site_noticias/carro.png" alt="carro" width="400"  /></a>
-        <a href="educacao.html"><img src="site_noticias/enem.png" alt="enem" width="400" /></a>
+        <a href="esporte.html"><img src="esporte.png" alt="esporte" width="400"  /></a>
+        <a href="carros.html"><img src="carro.png" alt="carro" width="400"  /></a>
+        <a href="educacao.html"><img src="enem.png" alt="enem" width="400" /></a>
             
     </div>
     <div class="imagens">
