--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@
             
     </div>
     <div class="imagens">
-        <img src="site_noticias/eleicoes.png" alt="elicoes" width="400"  />
-        <img src="site_noticias/correios.png" alt="correios" width="400"  />
-        <img src="site_noticias/trump.png" alt="trump" width="400"  />
+        <img src="eleicoes.png" alt="elicoes" width="400"  />
+        <img src="correios.png" alt="correios" width="400"  />
+        <img src="trump.png" alt="trump" width="400"  />
         
 </div> <br><br>
 </div>
 <div class="imagens">
-    <img src="site_noticias/publico.png" alt="publico" width="400"  />
-    <img src="site_noticias/carro2.png" alt="carros2" width="400" />
-    <img src="site_noticias/esporte2.png" alt="esporte2" width="400"  />
+    <img src="publico.png" alt="publico" width="400"  />
+    <img src="carro2.png" alt="carros2" width="400" />
+    <img src="esporte2.png" alt="esporte2" width="400"  />
 </div> <br><br>
 <fieldset>
 <div class="imagens">
